# store

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  reqirements.txt  requirements.txt  setup.cfg
apps/api/: urls.py
apps/baskets/: admin.py  models.py  selectors.py  serializers.py  urls.py
apps/common/: aes.py  models.py  validators.py
apps/contact/: admin.py  models.py  serializers.py  urls.py
apps/core/: models.py  urls.py  v1_urls.py  v2_urls.py
apps/core/middlewares/: CurrentUser.py
apps/home/: admin.py  models.py  serializers.py  translation.py  urls.py
apps/models/baskets/: admin.py  models.py
apps/models/contact/: admin.py  models.py
apps/models/home/: admin.py  models.py  translation.py
apps/models/products/: admin.py  models.py  translation.py
apps/models/site/: models.py
apps/models/site_settings/: admin.py  models.py  translation.py
apps/products/: admin.py  managers.py  models.py  selectors.py  serializers.py  translation.py  urls.py
apps/serializers/: __init__.py
apps/site/: admin.py  apps.py  models.py  translation.py
apps/users/: admin.py  apps.py  backend.py  models.py  regex.py  serializers.py  urls.py
common/: models.py
config/: celery.py  tasks.py  urls.py
config/django/: __init__.py  base.py  development.py  production.py
config/settings/: __init__.py  aws.py  base.py  celery.py  development.py  email.py  production.py  secret.py
requirements/: requirements.txt
scripts/: mail.py
templates/: base.html
utils/fields/: current_user.py
(+67 files in other folders)
